# wendRAG

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  compose.yml  config.example.yaml  fix_tests.py  mcp.json  test-roadmap-features.ps1
.github/workflows/: ci.yml
docs/: cli.md  configuration.md  entity-communities.md  mcp-tools.md  memory-sessions.md  retrieval.md  setup-example.md
examples/: inspect_chunks.rs
migrations/postgres/: 001_initial.sql  002_embedding_1024.sql  003_entity_graph.sql  004_url_file_type.sql  005_entity_communities.sql  006_memory.sql  007_add_indexes.sql
migrations/sqlite/: 001_initial.sql  002_entity_graph.sql  003_url_file_type.sql  004_entity_communities.sql  005_memory.sql  006_add_indexes.sql
resources/docs/: authentication-setup.md  cli.md  configuration.md  mcp-client-setup.md  mcp-tools.md  memory-sessions.md  project-structure.md  retrieval.md  setup-example.md
resources/testing/: data.csv  sample.txt
src/: auth.rs  config.rs  config_file.rs  lib.rs  main.rs  observability.rs
src/embed/: mod.rs  ollama.rs  openai_compat.rs  provider.rs
src/entity/: community.rs  community_manager.rs  extractor.rs  graph_build.rs  mod.rs  model.rs  normalize.rs
src/ingest/: chunker.rs  chunker_sections.rs  chunker_semantic.rs  directory.rs  mod.rs  pipeline.rs  reader.rs  types.rs  url.rs
src/mcp/: mod.rs  reconstruct.rs  server.rs  server_resources.rs  (+1 more)
test-docs/: README.md  config.json
tests/: auth_cli.rs  backend_parity.rs  daemon.rs  semantic_chunking_test.rs
(+34 files in other folders)
