[package]
name = "wend-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server", "transport-io", "schemars"] }
axum = "0.8"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
html-to-markdown-rs = "3.1.0"
robotstxt = "0.3"
url = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

pulldown-cmark = "0.13"
pdf-extract = "0.10"

sha2 = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
serde_yml = "0.0.12"
glob = "0.3"
async-trait = "0.1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
